--- a/index.html
+++ b/index.html
@@ -2,26 +2,56 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gracias por asistir</title>
+    <title>Tienda de Zapatos</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <header>
-            <h1>¡Gracias por asistir al taller!</h1>
-            <p>Esperamos que hayas disfrutado aprendiendo GitHub.</p>
-        </header>
 
-        <main>
-            <img src="https://cdn-icons-png.flaticon.com/512/190/190411.png" alt="Taller" class="icon">
-            <p>Recuerda practicar los conceptos: <strong>Fork, Commit, Pull Request</strong></p>
-            <button onclick="alert('¡Sigue practicando! 🚀')">Haz clic aquí</button>
-        </main>
+    <!-- ENCABEZADO -->
+    <header>
+        <h1>Zapatería Online</h1>
+        <p>Elegancia y comodidad en cada paso</p>
+    </header>
 
-        <footer>
-            <p>© 2026 Taller Básico de GitHub</p>
-        </footer>
-    </div>
+    <!-- MENÚ -->
+    <nav>
+        <a href="#">Inicio</a>
+        <a href="#">Damas</a>
+        <a href="#">Caballeros</a>
+        <a href="#">Ofertas</a>
+        <a href="#">Contacto</a>
+    </nav>
+
+    <!-- CONTENIDO -->
+    <main class="productos">
+
+        <div class="producto">
+            <img src="https://via.placeholder.com/250x200" alt="Zapato 1">
+            <h3>Zapatilla Deportiva</h3>
+            <p>Bs. 180</p>
+            <button>Comprar</button>
+        </div>
+
+        <div class="producto">
+            <img src="https://via.placeholder.com/250x200" alt="Zapato 2">
+            <h3>Zapato Formal</h3>
+            <p>Bs. 250</p>
+            <button>Comprar</button>
+        </div>
+
+        <div class="producto">
+            <img src="https://via.placeholder.com/250x200" alt="Zapato 3">
+            <h3>Sandalia Casual</h3>
+            <p>Bs. 150</p>
+            <button>Comprar</button>
+        </div>
+
+    </main>
+
+    <!-- PIE DE PÁGINA -->
+    <footer>
+        <p>© 2026 Zapatería Online | WhatsApp: 70000000</p>
+    </footer>
+
 </body>
 </html>
